src/objects/bizible2__Bizible_Custom_Settings_Proxy__c.object
<CustomObject>
    <description>Proxy object used for updating Bizible Global Settings</description>
    <fields>
        <fullName>bizible2__Custom_Revenue_Field_Name__c</fullName>
        <label>Custom Revenue Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Disable_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bizible2__Opportunity_Default_Amount__c</fullName>
        <label>Opportunity Default Amount</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bizible2__UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bizible2__Use_Custom_Amount_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custom Amount Field</label>
        <type>Checkbox</type>
    </fields>
    <label>Bizible Custom Settings Proxy</label>
    <nameField>
        <label>Bizible Custom Settings Proxy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bizible Custom Settings Proxy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>